# sc2am

./: .gitignore  AGENTS.MD  README.md  agents.md  pyproject.toml
.zed/: settings.json
maps/: Flat32s.SC2Map  Flat64.SC2Map  Flat64b.SC2Map  Flat64c.SC2Map
scam/: __init__.py  bot_vs_bot.py  remote_client.py  simple_bot.py  watch_replay.py
scam/environments/: base.py  minigame.py
scam/envs/: episodes.py  gym.py  gym_v0.py  gym_v1.py  gym_v2.py  impala_v2.py  ptz.py  trl_v0.py
scam/impala_v2/: collector.py  config.py  eval.py  main.py  model.py  vtrace.py
scam/impala_v2/model/: __init__.py  actor_critic.py
scam/impala_v2/model/encoders/: __init__.py  vector.py
scam/impala_v2/model/heads/: __init__.py  angle.py  command.py  value.py
scam/infra/: client.py  game.py  multiplayer.py  server.py
scam/maps/: generator.py
scam/research/: kaz.py  simple_bot.py
scam/smarte_v0/: collector.py  config.py  env.py  eval.py  interop.py  main.py
scam/smarte_v0/model/: __init__.py  actor_critic.py  config.py
scam/smarte_v0/model/encoders/: vector.py
scam/smarte_v0/model/heads/: __init__.py  base.py  value.py
scam/smarte_v1/: collector.py  env.py  eval.py  main.py  test_env.py
scam/smarte_v1/model/: __init__.py  actor_critic.py  config.py  test_model.py
scam/smarte_v1/model/attention/: __init__.py
scam/smarte_v1/model/encoders/: __init__.py  entity.py  temporal.py  vector.py
scam/smarte_v1/model/heads/: __init__.py  action_type.py  attack_target.py  move_direction.py  value.py
scam/train/: appo.py  dv3.py  impala.py  impala_v2.py  ppo.py  ppo_graph.py  ppo_torchrl.py  ppo_v0.py  ppo_v1.py  ppo_v2.py
smarte/envs/: gym_v0.py  gym_v1.py  gym_v2.py  trl_v0.py
smarte/impala_v2/: collector.py  config.py  eval.py  main.py
smarte/impala_v2/model/: __init__.py  actor_critic.py
smarte/infra/: client.py  game.py  map.py  server.py
smarte/maps/: generator.py
smarte/research/: coords.py
smarte/smarte_v0/: config.py  env.py  eval.py  rewards.py  test_env.py
smarte/smarte_v0/model/: __init__.py  actor_critic.py
smarte/smarte_v1/: collector.py  config.py  env.py  eval.py  interop.py  test_env.py
smarte/smarte_v1/model/: __init__.py  actor_critic.py  config.py  test_model.py
smarte/smarte_v3/: collector.py  config.py  env.py  eval.py  interop.py  main.py  obs.py  readme.md
smarte/smarte_v3/model/: __init__.py  actor_critic.py  config.py  gae.py
smarte/smarte_v3/tests/: test_auxiliary.py  test_env_alignment.py  test_masking.py
smarte/smarte_v4/: __init__.py  collector.py  config.py  env.py  eval.py  main.py  obs.py
smarte/smarte_v4/model/: __init__.py  actor_critic.py  config.py  unit_encoder.py
smarte/train/: appo.py  dv3.py  impala.py  ppo_graph.py  ppo_torchrl.py  ppo_v0.py  ppo_v1.py  ppo_v2.py
(+23 files in other folders)
