[project]
name = "SMARLE"
version = "0.1.2"
description = "Star Craft 2 Multi Agent Reinforcement Learning Environment"
requires-python = "~=3.12.5"
dependencies = [
    "s2clientprotocol @ git+https://github.com/rodgar-nvkz/s2client-proto.git",
    "websocket-client~=1.9.0",
    "stable-baselines3~=2.7.1",
    "pettingzoo[butterfly]~=1.24.0",
    "mpyq~=0.2.5",
    "tensorboard~=2.20.0",
    "wsaccel~=0.6.7",
    "loguru~=0.7.3",
    "portpicker~=1.6.0",
    "protobuf~=6.33.2",
    "torch==2.9.1",
    "tensordict>=0.10.0",
    "torchrl>=0.10.1",
]

[project.optional-dependencies]
dev = [
    "ipython~=9.9.0",
    "pytest>=9.0.2",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
typeCheckingMode = "standard"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", ]
